--- a/laser/HeatInput.ipynb
+++ b/laser/HeatInput.ipynb
@@ -9,12 +9,10 @@
    },
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression"
    ],
    "id": "9a420f42fe677f77",
    "outputs": [],
@@ -23,28 +21,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Laser settings",
-   "id": "852bb93d87175dc6"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
    "source": [
-    "Pattern, where the laser is permanently on and writes rows with a high level of overlap.\n",
+    "# Laser characteristics\n",
     "\n",
-    "$$s=v*t \\Leftrightarrow t = \\frac{s}{v}$$ \n",
-    "$$ s= a*t^2 \\Leftrightarrow t = \\sqrt{\\frac{s}{a}}$$ where $s=a*t$, therefore $a = \\frac{v^2}{s}$\n",
-    "\n"
+    "In this section, the width of the burned traces was measured and a linear regression model fitted.\n",
+    "\n",
+    "The coefficients were then used to create the laser.get_spot_size() function."
    ],
-   "id": "2c8b5638d9312b2e"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "20a861490aa9c2b7"
+   "id": "852bb93d87175dc6"
   },
   {
    "metadata": {
@@ -58,8 +42,6 @@
     "distances = [10, 20, 30, 40, 50]\n",
     "x_width = [0.3, 0.61, 1.11, 1.77, 2.21]\n",
     "y_width = [0.39, 0.85, 1.41, 2.2, 3.35]\n",
-    "\n",
-    "\n",
     "\n",
     "x = np.array(distances).reshape(-1, 1)\n",
     "x_fine = np.linspace(-30, 60, 100).reshape(-1, 1)\n",
@@ -76,14 +58,13 @@
     "\n",
     "model_y2 = LinearRegression()\n",
     "model_y2.fit(x[:-1], y_width[:-1])\n",
-    "x_fine_2 = x_fine[x_fine<40].reshape(-1, 1)\n",
+    "x_fine_2 = x_fine[x_fine < 40].reshape(-1, 1)\n",
     "y_pred_y2 = model_y2.predict(x_fine_2)\n",
     "\n",
     "model_y3 = LinearRegression()\n",
     "model_y3.fit(x[:-2], y_width[:-2])\n",
-    "x_fine_3 = x_fine[x_fine<30].reshape(-1, 1)\n",
+    "x_fine_3 = x_fine[x_fine < 30].reshape(-1, 1)\n",
     "y_pred_y3 = model_y3.predict(x_fine_3)\n",
-    "\n",
     "\n",
     "sns.set_theme(\"paper\", font_scale=1.7, style=\"whitegrid\", font=\"serif\")\n",
     "pal = sns.color_palette(\"deep\")\n",
