--- a/uCT_analysis/set_segmentation_settings.ipynb
+++ b/uCT_analysis/set_segmentation_settings.ipynb
@@ -12,11 +12,19 @@
    },
    "source": [
     "from mt.ct_utils import SegmentationSettings\n",
-    "from mt.scan import Scan\n",
-    "from pprint import pprint"
+    "from mt.scan import Scan"
    ],
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Set segmentation settings\n",
+    "This script is used to open a subset of the scan in napari and interactively set the segmentation settings. The settings are then saved to the scan object."
+   ],
+   "id": "e1c85d1e26c6de1b"
   },
   {
    "metadata": {
@@ -27,13 +35,13 @@
    },
    "cell_type": "code",
    "source": [
-    "path = \"../../04_uCT/AD29/\"\n",
+    "path = \"../../04_uCT/AD63/\"\n",
     "scan = Scan(path,\n",
     "            discard_ends=True,\n",
     "            downscale=False)\n",
     "scan.load(logging=True, refresh=False)\n",
     "\n",
-    "# scan.show_hist()\n",
+    "scan.show_hist()\n",
     "\n",
     "scan.try_segmentation_settings(subset_size=50)\n",
     "scan.try_segmentation_settings(segment_particles_only=True, subset_size=50)"
@@ -54,94 +62,6 @@
     }
    ],
    "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-01T16:18:56.978313Z",
-     "start_time": "2024-11-01T16:18:56.969348Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "pprint({n:n*2**8 for n in range(50, 220, 10)})",
-   "id": "d592c79950d1293c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{50: 12800,\n",
-      " 60: 15360,\n",
-      " 70: 17920,\n",
-      " 80: 20480,\n",
-      " 90: 23040,\n",
-      " 100: 25600,\n",
-      " 110: 28160,\n",
-      " 120: 30720,\n",
-      " 130: 33280,\n",
-      " 140: 35840,\n",
-      " 150: 38400,\n",
-      " 160: 40960,\n",
-      " 170: 43520,\n",
-      " 180: 46080,\n",
-      " 190: 48640,\n",
-      " 200: 51200,\n",
-      " 210: 53760}\n"
-     ]
-    }
-   ],
-   "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-02T15:40:53.870673Z",
-     "start_time": "2024-11-02T15:40:53.864806Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "(11520\n",
-    "/2**8)"
-   ],
-   "id": "b4c572a27a316a51",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "45.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-02T15:40:43.543587Z",
-     "start_time": "2024-11-02T15:40:43.537375Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "scan.particle_segmentation_settings\n",
-   "id": "e69df92cd841f24b",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SegmentationSettings(air_mask_sigma=1.6, air_thresh=(19200, 11520), particle_mask_sigma=1.6, particle_n_erosions=4, particle_enlarge_radius=1, smooth_labels_radius=2)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
   },
   {
    "metadata": {
@@ -169,24 +89,6 @@
    "id": "84313fbec557f455",
    "outputs": [],
    "execution_count": 8
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-02T11:56:16.946232Z",
-     "start_time": "2024-11-02T11:56:14.083222Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# scan.segment()\n",
-    "scan.voronoi_tesselation()\n",
-    "# scan.segment_particles()\n",
-    "scan.show(\"z\")"
-   ],
-   "id": "2e94ee806e2f911a",
-   "outputs": [],
-   "execution_count": 3
   }
  ],
  "metadata": {
