--- a/uCT_analysis/view.ipynb
+++ b/uCT_analysis/view.ipynb
@@ -8,14 +8,19 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from mt.scan import Scan"
-   ],
+   "source": "from mt.scan import Scan",
    "id": "dcc92dd7cbbf9bc7",
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# View scans and export slices\n",
+    "This script is used to view scans in napari. Slice views can be exported as images with scale bars."
+   ],
+   "id": "27758abd217149c7"
   },
   {
    "metadata": {
@@ -26,8 +31,8 @@
    },
    "cell_type": "code",
    "source": [
-    "path = \"../../04_uCT/AD29/\"\n",
-    "scan = Scan(path, downscale=False) \n",
+    "path = \"../../04_uCT/AD63/\"\n",
+    "scan = Scan(path, downscale=False)\n",
     "scan.load(logging=True)"
    ],
    "id": "db170f110a895502",
@@ -75,9 +80,9 @@
    "source": [
     "scan.export_image(\"stack\",\n",
     "                  \"y\",\n",
-    "                  1380, \n",
-    "                  region_of_interest=[0.22, 0.3, 0.2], \n",
-    "                  aspect_ratio=5, \n",
+    "                  1380,\n",
+    "                  region_of_interest=[0.22, 0.3, 0.2],\n",
+    "                  aspect_ratio=5,\n",
     "                  fixed_length_type=\"overview\")"
    ],
    "id": "7a06fd8423e58750",
